--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   shared_preferences: ^0.5.8
   google_maps_flutter: ^0.5.30
   location: ^3.0.2
+  image_picker: ^0.6.7+4
+  
   
 
 dev_dependencies:
